# sensing-flow-mobile

./: .gitignore  README.md  eslint.config.mjs  index.html  justfile  package.json  pnpm-lock.yaml  swagger.json  tsconfig.json  vite.config.ts
tauri-plugin-auth-cognito/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-auth-cognito/android/: build.gradle.kts
tauri-plugin-auth-cognito/guest-js/: index.ts  types.ts
tauri-plugin-auth-cognito/ios/: Package.swift  README.md
tauri-plugin-auth-cognito/ios/Sources/: AuthCognitoPlugin.swift
tauri-plugin-auth-cognito/permissions/: default.toml
tauri-plugin-auth-cognito/permissions/autogenerated/: reference.md
tauri-plugin-auth-cognito/permissions/schemas/: schema.json
tauri-plugin-auth-cognito/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-sensorkit/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-sensorkit/android/: build.gradle.kts
tauri-plugin-sensorkit/entity/: Cargo.toml
tauri-plugin-sensorkit/entity/src/: lib.rs  sensor_data.rs  sensor_groups.rs
tauri-plugin-sensorkit/guest-js/: index.ts  sensorEvent.ts  type.ts
tauri-plugin-sensorkit/ios/: Package.swift  README.md
tauri-plugin-sensorkit/ios/Sources/: ExamplePlugin.swift
tauri-plugin-sensorkit/migration/src/: lib.rs  m20260115_071016_create_tables.rs
tauri-plugin-sensorkit/permissions/: default.toml
tauri-plugin-sensorkit/src/: commands.rs  desktop.rs  error.rs  file_service.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-sensorkit/src/db/: db_service.rs  init.rs  (+1 more)
(+165 files in other folders)
