[package]
name = "tauri-plugin-auth-cognito"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-auth-cognito"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"
tauri-plugin-deep-link = "2.4.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.149"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
