[package]
name = "tauri-plugin-sensorkit"
version = "0.1.0"
authors = ["SaooRu65536"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sensorkit"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
chrono = "0.4.42"
tauri-plugin-sql = "2.3.1"
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "./migration" }
entity = { path = "./entity" }

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
tauri-build = "2.5.3"
